force-app/main/default/objects/Employee_Referral__c/Employee_Referral__c.object-meta.xml
<CustomObject>
    <description>Object used to track and manage employee referrals for job postings, linking candidates to positions through employee recommendations.</description>
    <label>Employee Referral</label>
    <nameField>
        <displayFormat>REF-{00000}</displayFormat>
        <label>Referral Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Referrals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>