force-app/main/default/objects/Employee_Referral__c/fields/Bonus_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the referring employee is eligible for a referral bonus if the candidate is hired.</description>
    <inlineHelpText>Check if this referral qualifies for a bonus upon successful hire.</inlineHelpText>
    <label>Bonus Eligible</label>
    <type>Checkbox</type>
</CustomField>