force-app/main/default/objects/Employee_Referral__c/fields/Bonus_Paid__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the referral bonus has been paid to the referring employee.</description>
    <inlineHelpText>Check this box once the referral bonus has been processed and paid.</inlineHelpText>
    <label>Bonus Paid</label>
    <type>Checkbox</type>
</CustomField>