force-app/main/default/objects/Employee_Referral__c/fields/Hiring_Manager_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Manager_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The hiring manager responsible for making the final hiring decision for this referral.</description>
    <inlineHelpText>Select the hiring manager assigned to this referral.</inlineHelpText>
    <label>Hiring Manager Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Referrals Assigned (Hiring Manager)</relationshipLabel>
    <relationshipName>Referrals_Hiring_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>