force-app/main/default/objects/Employee_Referral__c/fields/Job_Posting__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting__c</fullName>
    <description>The job posting for which this candidate is being referred.</description>
    <inlineHelpText>Select the job posting this referral is for.</inlineHelpText>
    <label>Job Posting</label>
    <referenceTo>Job_Posting__c</referenceTo>
    <relationshipLabel>Employee Referrals</relationshipLabel>
    <relationshipName>Employee_Referrals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>