force-app/main/default/objects/Employee_Referral__c/fields/Last_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Change__c</fullName>
    <description>The date and time when the referral status was last modified.</description>
    <inlineHelpText>Automatically updated when the status changes.</inlineHelpText>
    <label>Last Status Change</label>
    <type>DateTime</type>
</CustomField>