force-app/main/default/objects/Employee_Referral__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>General notes and comments about the referral, candidate, or hiring process.</description>
    <inlineHelpText>Enter any additional notes or observations about this referral.</inlineHelpText>
    <label>Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>