force-app/main/default/objects/Employee_Referral__c/fields/Recruiter_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The recruiter responsible for managing this referral through the hiring process.</description>
    <inlineHelpText>Select the recruiter assigned to manage this referral.</inlineHelpText>
    <label>Recruiter Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Referrals Assigned (Recruiter)</relationshipLabel>
    <relationshipName>Referrals_Recruiter</relationshipName>
    <type>Lookup</type>
</CustomField>