force-app/main/default/objects/Employee_Referral__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>The reason why the referral was rejected, required when Status is set to Rejected.</description>
    <inlineHelpText>Select the reason for rejection. Required when the referral status is Rejected.</inlineHelpText>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>Position Filled</fullName>
            </value>
            <value>
                <fullName>Candidate Declined</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>