force-app/main/default/objects/Employee_Referral__c/fields/Resume_Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Resume_Content_Document_Id__c</fullName>
    <label>Resume Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>