force-app/main/default/objects/Employee_Referral__c/fields/Resume_Link__c.field-meta.xml
<CustomField>
    <fullName>Resume_Link__c</fullName>
    <description>URL or link to the candidate&apos;s resume (e.g., LinkedIn, Google Drive, etc.)</description>
    <inlineHelpText>Enter the URL to the candidate&apos;s resume or online profile.</inlineHelpText>
    <label>Resume Link</label>
    <type>Url</type>
</CustomField>