force-app/main/default/objects/Employee_Referral__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <description>The date and time when the referral was initially submitted.</description>
    <inlineHelpText>Automatically populated when the referral is created.</inlineHelpText>
    <label>Submission Date</label>
    <type>DateTime</type>
</CustomField>