force-app/main/default/objects/Employee_Referral__c/validationRules/Prevent_Self_Referral.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Self_Referral</fullName>
    <active>false</active>
    <description>Reserved for self-referral prevention. Disabled because Candidate__c is not modeled as a User/Contact record, so comparing Referred_By__c to $User.Id blocks every valid employee submission.</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorDisplayField>Referred_By__c</errorDisplayField>
    <errorMessage>You cannot refer yourself. Please select a different employee as the referrer.</errorMessage>
</ValidationRule>