force-app/main/default/objects/Employee_Referral__c/validationRules/Rejection_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_Reason_Required</fullName>
    <active>true</active>
    <description>Rejection reason must be provided when status is Rejected</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Rejected&quot;),
    ISBLANK(TEXT(Rejection_Reason__c))
)</errorConditionFormula>
    <errorMessage>Please provide a rejection reason when rejecting a referral.</errorMessage>
</ValidationRule>